# hero_vision

./: .gitignore  README.md
src/rm_auto_aim/armor_detector/: CMakeLists.txt
src/rm_auto_aim/armor_detector/include/armor_detector/: pnp_solver.hpp
src/rm_auto_aim/armor_detector/src/: detector.cpp  pnp_solver.cpp
src/rm_auto_aim/armor_tracker/: CMakeLists.txt
src/rm_auto_aim/armor_tracker/include/armor_tracker/: extended_kalman_filter.hpp  tracker.hpp  tracker.txt  tracker_node.hpp
src/rm_auto_aim/armor_tracker/src/: extended_kalman_filter.cpp  tracker.cpp  tracker.txt  tracker_node.cpp
src/rm_auto_aim/auto_aim_interfaces/msg/: Target.msg
src/rm_auto_aim/rm_projectile_motion/: CMakeLists.txt  package.xml
src/rm_auto_aim/rm_projectile_motion/config/: solver_params.yaml
src/rm_auto_aim/rm_projectile_motion/include/rm_projectile_motion/: projectile_solver_node.hpp
src/rm_auto_aim/rm_projectile_motion/launch/: solver.launch.py
src/rm_auto_aim/rm_projectile_motion/src/: projectile_solver_node.cpp
src/rm_gimbal_description/urdf/: rm_gimbal.urdf.xacro
src/rm_serial_driver/include/rm_serial_driver/: crc.hpp  packet.hpp  rm_serial_driver.hpp
src/rm_serial_driver/src/: rm_serial_driver.cpp
src/rm_vision/rm_vision_bringup/config/: camera_info.yaml  launch_params.yaml  node_params.yaml
src/rm_vision/rm_vision_bringup/launch/: common.py  no_hardware.launch.py  vision_bringup.launch.py
src/ros2_hik_camera/: README.md
